tests/invalid/UnionType_Invalid_24.whiley
type named is null | {int f}

function f(named rec) -> (named r):
    rec.f = 1
    return rec